<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MedicineActivity">


    <TextView
        android:id="@+id/label_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="80dp"
        android:text="@string/label_med"
        android:textSize="14sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/tip_med_name"
        android:ems="10"
        android:id="@+id/med_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/white"
        android:paddingLeft="10dp"/>

    <TextView
        android:id="@+id/label_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="150dp"
        android:text="@string/label_lab"
        android:textSize="14sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/tip_lab_name"
        android:ems="10"
        android:id="@+id/lab_name"
        android:layout_below="@+id/med_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/med_name"
        android:layout_alignEnd="@+id/med_name"
        android:background="@android:color/white"
        android:paddingLeft="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/save"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lab_name"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_generic"
        android:onClick="saveMedicine"/>

</RelativeLayout>
