<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">


    <ImageView
        android:id="@+id/name"
        android:layout_width="600px"
        android:layout_height="200px"
        android:layout_centerHorizontal="true"
        android:src="@drawable/med_reminder" >
    </ImageView>

    <Button
        android:id="@+id/button_cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_cad"
        android:onClick="callMedicine"/>

    <TextView
        android:id="@+id/label_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_cad"
        android:layout_marginTop="4dp"
        android:text="@string/reg_med"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_cad"
        android:layout_marginTop="50dp"
        android:background="@drawable/bt_med"
        android:onClick="callMedicineList"/>

    <TextView
        android:id="@+id/label_view_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_med"
        android:layout_marginTop="4dp"
        android:text="@string/view_med"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button_care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_med"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/bt_care"
        android:onClick="callCaregiverList"/>

    <TextView
        android:id="@+id/label_view_care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_care"
        android:layout_marginTop="4dp"
        android:text="@string/view_care"
        android:textSize="20sp"/>


</RelativeLayout>
